--- a/Mango_Ecommerce_Frontend/mango_app/src/html/gallery.html
+++ b/Mango_Ecommerce_Frontend/mango_app/src/html/gallery.html
@@ -142,7 +142,7 @@
             </div>
          </div>
       </div>
-      <!-- end gallery -->
+      <!-- end of gallery -->
       <
       <!--  footer -->
       <footer>
