New Product file

--- a/Mango_Ecommerce_Frontend/mango_app/src/html/product.html
+++ b/Mango_Ecommerce_Frontend/mango_app/src/html/product.html
@@ -155,7 +155,7 @@
       </div>
       <!-- end our products -->
       
-      <!--  footer -->
+      <!-- Start Of footer -->
       <footer>
          <div class="footer">
             <div class="container">
